# poetry-example

./: .dockerignore  Dockerfile
app/: pyproject.toml
package-a/: pyproject.toml
package-b/: pyproject.toml
